[project]
name = "chat_msg"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
  "SQLAlchemy>=2.0.45",
  "alembic>=1.18.1",
  "fastapi[standard]>=0.128.0",
  "psycopg[binary,pool]>=3.3.2",
]

[project.optional-dependencies]
dev = ["ruff", "basedpyright"]

[tool.basedpyright]
typeCheckingMode = "standard"
